[gd_scene load_steps=3 format=2]

[ext_resource path="res://asset_data/galaxy.gd" type="Script" id=1]
[ext_resource path="res://asset_data/image_utils/image_texture_pool.tscn" type="PackedScene" id=2]

[node name="Galaxy" type="Node"]
script = ExtResource( 1 )

[node name="Assets" type="Node" parent="."]

[node name="ImageTexturePool" parent="." instance=ExtResource( 2 )]
[connection signal="texture_ready" from="ImageTexturePool" to="." method="_on_ImageTexturePool_texture_ready"]
